--- a/chat-app-fs/package.json
+++ b/chat-app-fs/package.json
@@ -9,9 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "firebase": "^10.11.1",
     "next": "14.2.3",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.2.1",
     "socket.io-client": "^4.7.5"
   },
   "devDependencies": {
